--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,15 @@
 name: run main.py
 
-on:push
+on:
+  push:
+    # Sequence of patterns matched against refs/heads
+    branches-ignore:    
+      - 'mona/octocat'
+      - 'releases/**-alpha'
+    # Sequence of patterns matched against refs/tags
+    tags-ignore:        
+      - v2
+      - v1.
 
 jobs:
   build:
