--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,6 +27,7 @@ jobs:
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
+          pip install beautifulsoup4
           pip install -r requirements.txt
           
       - name: execute py script # run main.py
