--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install beautifulsoup4
+          pip install nltk
           pip install -r requirements.txt
           
       - name: execute py script # run main.py
